# tencent-sdk-rust

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  README.zh-CN.md  dns.md  ssl.md
.github/: dependabot.yml
.github/workflows/: ci.yaml
examples/: async_describe_instances.rs  blocking_account_balance.rs
src/: auth.rs  client.rs  error.rs  lib.rs  signing.rs
src/api/: billing.rs  cdn.rs  cvm.rs  dns.rs  mod.rs  ssl.rs  tag.rs  vpc.rs
src/client/: async_client.rs  blocking_client.rs  common.rs  config.rs  endpoint.rs  metrics.rs  mod.rs
src/core/: credentials.rs  endpoint.rs  error.rs  mod.rs
src/middleware/: mod.rs  retry_async.rs  retry_blocking.rs
src/services/: billing.rs  common.rs  cvm.rs  mod.rs  tag.rs  vpc.rs
src/services/cdn/: mod.rs  update_domain_config.rs
src/services/dns/: create.rs  delete.rs  mod.rs  modify.rs  types.rs
src/services/ssl/: apply.rs  check.rs  download.rs  mod.rs  upload.rs
src/transport/: async_transport.rs  blocking_transport.rs  mod.rs
src/types/: billing.rs  cdn.rs  common.rs  cvm.rs  dns.rs  mod.rs  newtypes.rs  ssl.rs  tag.rs  vpc.rs
src/util/: mod.rs  redact.rs  retry.rs  url.rs
tests/: contract_tencent_cloud.rs  http_flows.rs
