[package]
name = "tencent-sdk"
description = "?? Tencent Cloud API SDK written in Rust"
version = "0.1.2"
edition = "2021"
license = "MIT"
authors = ["lvillis<lvillis@outlook.com>"]
repository = "https://github.com/lvillis/tencent-sdk-rust"
homepage = "https://github.com/lvillis/tencent-sdk-rust"
documentation = "https://github.com/lvillis/tencent-sdk-rust/blob/main/README.md"
exclude = [
    "/docs/",
    "/tests/",
    "/.config/",
    "/.github/",
    "/.justfile",
    "/rust-toolchain.toml",
    "/.gitignore",
]

[dependencies]
tokio = { version = "1.47.1", default-features = false, features = ["rt", "rt-multi-thread", "macros", "time"] }
reqwest = { version = "0.12.23", default-features = false, features = ["json", "rustls-tls", "blocking"] }
chrono = "0.4.42"
hmac = "0.12.1"
sha2 = "0.10.9"
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
async-trait = "0.1.89"
http = "1.3.1"
thiserror = "2.0.16"
url = "2.5.7"

[dev-dependencies]
wiremock = { version = '0.6.5' }

[package.metadata.release]
tag-prefix = ""
tag-name = "{{prefix}}{{version}}"
pre-release-commit-message = "chore: release {{crate_name}} version {{version}}"
tag-message = "chore: release {{crate_name}} version {{version}}"
pre-release-hook = ["git", "cliff", "-o", "CHANGELOG.md", "--tag", "{{version}}" ]
