[package]
name = "tencent-sdk"
description = "📦 Tencent Cloud API SDK written in Rust"
version = "0.1.4"
edition = "2021"
license = "MIT"
authors = ["lvillis<lvillis@outlook.com>"]
repository = "https://github.com/lvillis/tencent-sdk-rust"
homepage = "https://github.com/lvillis/tencent-sdk-rust"
documentation = "https://github.com/lvillis/tencent-sdk-rust/blob/main/README.md"
exclude = [
    "/docs/",
    "/tests/",
    "/.config/",
    "/.github/",
    "/.idea/",
    "/target/",
    "/.justfile",
    "/rust-toolchain.toml",
    "/.gitignore",
    "AGENTS.md",
    "CONTEXT.md"
]

[dependencies]
tokio = { version = "1.48.0", default-features = false, features = ["rt", "rt-multi-thread", "macros", "time"] }
reqwest = { version = "0.12.25", default-features = false, features = ["json", "rustls-tls", "blocking"] }
chrono = { version = "0.4.42" }
hmac = { version = "0.12.1" }
sha2 = { version = "0.10.9" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145" }
async-trait = { version = "0.1.89" }
http = { version = "1.4.0" }
thiserror = { version = "2.0.17" }
url = { version = "2.5.7" }
fastrand = { version = "2.3.0" }

[dev-dependencies]
wiremock = { version = '0.6.5' }

[package.metadata.release]
tag-prefix = ""
tag-name = "{{prefix}}{{version}}"
pre-release-commit-message = "chore: release {{crate_name}} version {{version}}"
tag-message = "chore: release {{crate_name}} version {{version}}"
pre-release-hook = ["git", "cliff", "-o", "CHANGELOG.md", "--tag", "{{version}}" ]
